# pytweezer

./: .gitignore  03Jun26Exp.ipynb  03Jun26Exp_clean.ipynb  CLAUDE.md  OpenVPN-Config.ovpn  analysis.py  anapico.py  async_device_comms_notes.md  data.h5  kill_stale.bat  open_controller.bat  open_process_manager.bat  pyproject.toml  pyrightconfig.json  requirements.txt  start_client.bat  start_servers.bat
.claude/: .gitignore
Data/measurements_h5/: FakeTweezerArray_task108.h5  FakeTweezerArray_task82.h5  FakeTweezerArray_task83.h5  FakeTweezerArray_task84.h5  task10_RBBasicTest.h5  task11_RBBasicTest.h5  task12_RBBasicTest.h5  task13_RBBasicTest.h5  task14_RBBasicTest.h5  task15_RBBasicTest.h5  task16_RBBasicTest.h5  task17_RBBasicTest.h5  task18_RBBasicTest.h5  task19_RBBasicTest.h5  task20_RBBasicTest.h5  task22_RBBasicTest.h5  task23_RBBasicTest.h5  task24_RBBasicTest.h5  task25_RBBasicTest.h5  task26_RBBasicTest.h5  task27_RBBasicTest.h5  task28_RBBasicTest.h5  task29_RBBasicTest.h5  task2_RBBasicTest.h5  task30_RBBasicTest.h5  task31_RBBasicTest.h5  task3_RBBasicTest.h5  task4_RBBasicTest.h5  task5_RBBasicTest.h5  task6_RBBasicTest.h5  task7_RBBasicTest.h5  task8_RBBasicTest.h5  task9_RBBasicTest.h5
Remote_visble_tests/: Image_analysis_2.ipynb  img_0.tiff
build_tools/: build.py
configuration/: config.py  configfile.json  device_db.py  experiments.json  loopfile.json  looplist_New Tab #0.json  prepfile.json
configuration/properties/: properties.json  properties__2026_03_19__18_42_14.json  properties__2026_03_19__19_50_37.json  (+27 more)
docs/: applets.md  async_device_comms_notes.md  device_framework.md  gui_architecture.md  influx_logging.md  rearrangement_coordinator.md
examples/: auto_mot.py
logs/: pytweezer-2026-05-12.jsonl  pytweezer-2026-05-14.jsonl  pytweezer-2026-06-04.jsonl  pytweezer-2026-07-07.jsonl  pytweezer-2026-07-08.jsonl  pytweezer-2026-07-09.jsonl  pytweezer-2026-07-10.jsonl  pytweezer-2026-07-13.jsonl  pytweezer-2026-07-14.jsonl  pytweezer-2026-07-20.jsonl  pytweezer-2026-07-21.jsonl
poetry/: pyproject.toml
pytweezer/: Pulse_Listen_test.ipynb  __init__.py  analysis.py  arduino.py  communication.py  driver_testing.ipynb  experiment.py  image_viewer.py  imagemX2.py  logging_utils.py  parallel.py  phasemask.py  rearrangement_node.py  rearrangement_node_server.py  rearrangement_server_test.ipynb  thorcam_test.ipynb
scripts/: start_dashboard.bat  start_device_manager.bat
tests/: GlobalNormalizedMeasurements.csv  NewFile10.csv  NewFile8.csv  NewFile9.csv  NormLutMeasurements.csv  NormalizedMeasurements.csv  PhaseFitMeasurements.csv  PhaseMeasurements.csv  caf_mm_test.ipynb  camtest.ipynb  conftest.py  experiment_result_10.h5  experiment_result_3.h5  experiment_result_4.h5  experiment_result_5.h5  experiment_result_6.h5  experiment_result_7.h5  experiment_result_8.h5  experiment_result_9.h5  fast_slm_calibration_test.ipynb  gpu_phasemask_gen_test.ipynb  h5reader_test.ipynb  image_viewer_test.ipynb  notebook_exp_test.ipynb  raw0.csv  raw0_calibrated.csv  rearrangement_algo_test.ipynb  rpc_test.ipynb  sim.ipynb  slm-client-test.ipynb  slm_client_test.ipynb  slm_control.ipynb  slm_sequence_timing_benchmark.ipynb  synthetic_camera_server_test.py  test_applet_launcher.py  test_composite.py  test_coordinator.py  test_experiment_handler.ipynb  test_gui.py  test_parallel.py  (+5 more)
tools/: test_applet.ipynb  test_log_publish.py
(+190 files in other folders)
